css/styles.css
#home {
  background-color: #000028;
}
#contact {
  background-color: #000028;
}
#audio {
  background-color: #000028;
  color: #fff;
  height: 100%;
}
html {
  /*background-color: #000028;*/
}
body {
  background-color: #000028;
}
.unselectable {
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -o-user-select: none;
  user-select: none;
}
.padding-top {
  padding-top: 25px;
}

/*NAVBAR*/
.navbar {
  background-color: rgba(0, 0, 0, 0.5);
  position: fixed;
  width: 100%;
  border: none;
  margin-bottom: 0;
}
.navbar-default .navbar-brand {
  height: auto;
  padding-bottom: 5px;
}
.navbar-default .navbar-brand:hover {
  color: #000;
}
.navbar-default .navbar-brand img {
  height: 100px;
}
.navbar-default .nav {
  margin-top: 70px;
}
.navbar-default .navbar-nav>li>a {
  color: #fff;
  text-shadow: 5px 5px 20px #000;
}
.navbar-default .navbar-nav>li>a:hover {
  color: #fff;
  background-color: #5b83a1;
}
#header-filler {
  height: 120px;
  background-color: #0B003B;
  margin: 0 -15px;
}
/*END NAVBAR*/

/*BIG JUMBOTRON*/
#main-jumbo {
  background-color: #0B003B;
  border-bottom: 10px solid #906333;
  /*margin-left: -15px;
  margin-right: -15px;*/
}
.jumbo {
  background-image: url(../img/web_banner.png);
  background-size: cover;
  box-shadow: inset 0 0 10px 15px #0B003B;
  height: auto;
}
#banner {
  width: 100%;
  visibility: hidden;
}
/*END JUMBOTRON*/

/*TEXT*/
#text h1 {
  text-align: center;
  font-size: 5em;
}
#text h1 a {
  color: #906333;
  text-decoration: underline;
}
#text h1 a:hover {
  color: #cbd018;
}
#text h2 {
  text-align: center;
  color: #fff;
  font-size: 4em;
}
#text h2 a {
  color: #fff;
}
/*END TEXT*/

/*PROMO VIDEO*/
#promo-border {
  background-color: #000028;
  margin-top: 50px;
  margin-left: -15px;
  margin-right: -15px;
  padding-left: 15px;
  padding-right: 15px;
  height: 80vh;
}
.promo-title {
  text-align: center;
  line-height: 60px;
  margin: 15px;
  display: inline-block;
  width: calc(100% - 30px);
  color: #906333; /*DARK GOLD*/
}
#promo-video {
  height: 100%;
  width: 100%;
  padding-left: calc(10% - 15px);
  padding-right: calc(10% - 15px);
  padding-bottom: 100px;
}
/*END PROMO VIDEO*/

/*IMAGE SELECTOR*/
#image-display {
  /*width: 100%;*/
  margin-left: -32px;
  margin-right: -32px;
  border: 2px solid #000;
}
#image {
  width: 100%;
}
#image-selection {
  border: 2px solid #000;
  margin-left: -32px;
  margin-right: -32px;
  margin-bottom: 100px;
  font-size: 0px;
}
.image {
  height: auto;
  display: inline;
}
.image-links {
  border: 2px solid #000;
  display: inline;
  max-width: 25%;
  cursor: pointer;
}
/*END IMAGE SELECTOR*/

/*AUDIO PAGE*/
#audio h1 {
  color: #906333;
  font-size: 5em;
}
#audio p {
  font-size: 1.5em;
  text-align: justify;
}
.downloads {
  margin-top: 50px;
  font-size: 3em;
}
.audio-link {
  font-size: 1.6em;
  color: #906333;
  cursor: pointer;
}
.audio-link:hover {
  color: #cbd018;
}
.audio-player {
  display: block;
  width: 800px;
  height: 400px;
}
.hidden-audio {
  display: none;
}
/*END AUDIO PAGE*/

/*CONTACT INFO*/
/*#contact-info {
  margin-left: 25%;
  margin-top: 5%;
}*/
#contact-info h1 {
  color: #D8B175;
  font-size: 5em;
  margin-top: 100px;
  margin-bottom: 50px;
}
#contact-list {
  list-style-type: none;
  color: #fff;
  font-size: 2em;
  /*padding-top: 20px;*/
}
#contact-list li {
  padding-top: 20px;
}
#map-container {
  /*height: 100%;*/
  margin-top: 180px;
}
#map {
  height: 450px;
  width: 100%;
}
.church-link {
  margin-top: 40px;
}
.church-link h1 {
  text-align: center;
  font-size: 4em;
}
.church-link a {
  color: #906333;
  text-decoration: underline;
}
.church-link a:hover {
  color: #cbd018;
}
/*END CONTACT INFO*/


/*BEGIN FOOTER*/
footer {
  background-color: #000014;
  color: #BFC0C1;
  margin-top: 150px;
  padding: 25px 200px;
}
.sticky-footer {
  position: absolute;
  bottom: 0;
  width: 100%;
}
.copyright {
  text-align: center;
  font-family: 'Alegreya Sans', sans-serif;
  font-size: 18px;
  margin: 0;
  padding-bottom: 10px;
}
.social {
  text-align: center;
}
.media {
     background-color:rgb(46,66,209);
     border:4px solid #FFF;
     border-radius:100%;
     font-size:34px !important;
     margin:15px;
     padding:10px;
     color:#FFF;
     height: 62px;
     width: 62px;
     transition:background 0.2s linear 0s;
}

.media:hover {
     background-color:#d1bb2e;
}

.fa-facebook {background-color:#0c516e;}
.fa-twitter {background-color:#8ca6d9;}

.fa-envelope::before {
  margin-left: 1px;
}
.fa-twitter::before {
  margin-left: 2px;
}
/*END FOOTER*/

/*BEGIN SCALING*/

@media (min-width: 768px) {
  /*NAVBAR*/
  .navbar {
    margin-left: -15px;
    margin-right: -15px;
    padding: 0;
    border-radius: 0;
  }
  ul.navbar-nav {
    /*margin-top: 28px;*/
    margin-top: auto;
    margin-bottom: auto;
  }
  #inner-header {
  }
  /*END NAVBAR*/

  /*BIG JUMBOTRON*/
  #main-jumbo {
    margin-left: -15px;
    margin-right: -15px;
  }
  /*END JUMBOTRON*/
}

/* BIG^  vTINY */

@media (max-width: 767px) {
  #home {
    margin: 0;
    padding: 0;
  }
  #audio {
    margin: 0;
    padding: 0;
  }
  #contact {
    margin: 0;
    padding: 0;
  }

  /*NAVBAR*/
  div.container.header {
    padding: 0;
  }
  #inner-header {
    /*margin: 0;*/
    padding: 0;
  }
  .navbar {
    border-radius: 0;
  }
  .navbar-item {
    font-size: 28px;
    font-weight: bold;
    padding: 10px 0;
  }
  .navbar-default .nav {
    margin-top: 7.5px;
  }
  button.navbar-toggle {
    position: absolute;
    right: 0;
  }
  .navbar-collapse {
    border: none;
    -webkit-box-shadow: inset 0 0px 0 rgba(255,255,255,0);
  }
  #header-filler {
    height: 120px;
    background-color: #0B003B;
    margin: 0;
  }
  /*END NAVBAR*/

  /*BIG JUMBOTRON*/
  #main-jumbo {
    visibility: hidden;
    height: 20px;
    /*padding-left: 0;
    padding-right: 0;*/
  }
  .jumbo {
    box-shadow: none;
  }
  /*END JUMBOTRON*/

  /*PROMO VIDEO*/
  #promo-border {
    margin-left: 0;
    margin-right: 0;
    padding-left: 15px;
    padding-right: 15px;
    height: 80vh;
  }
  #promo-video {
    height: 100%;
    padding-left: 0;
    padding-right: 0;
    margin-left: -15px;
    margin-right: -15px;
    text-align: center;
    width: calc(100% + 30px);
  }
  /*END PROMO VIDEO*/

  /*IMAGE SELECTOR*/
  #image-display {
    /*width: 100%;*/
    margin-left: -15px;
    margin-right: -15px;
    border: 2px solid #000;
  }
  #image {
    width: 100%;
  }
  #image-selection {
    border: 2px solid #000;
    margin-left: -15px;
    margin-right: -15px;
    margin-bottom: 100px;
    font-size: 0px;
  }
  .image {
    height: auto;
    display: inline;
  }
  .image-links {
    border: 2px solid #000;
    display: inline;
    max-width: 25%;
    cursor: pointer;
  }
  /*END IMAGE SELECTOR*/

  /*AUDIO PAGE*/
  #audio h1 {
    color: #906333;
    font-size: 3em;
    text-align: center;
  }
  #audio p {
    font-size: 1.3em;
    text-align: justify;
  }
  .downloads {
    margin-top: 50px;
    font-size: 3em;
  }
  .audio-player {
    padding-left: 0;
    padding-right: 0;
    /*margin-left: -15px;*/
    /*margin-right: -15px;*/
    text-align: center;
    height: 100%;
    width: 100%;
  }
  /*END AUDIO PAGE*/

  /*CONTACT INFO*/
  #contact-info {
    margin-left: 0;
    margin-top: 0;
  }
  #contact-info h1 {
    padding-left: 5%;
    margin-bottom: 50px;
    margin-top: 50px;
  }
  #contact-list {
    padding: 0;
    margin: 0;
    margin-bottom: 20%;
    padding-left: 5%;
    list-style-type: none;
    font-size: 1.5em;
  }
  /*END CONTACT INFO*/

  /*BEGIN FOOTER*/
  footer {
    background-color: #000014;
    color: #BFC0C1;
    margin-top: 50px;
    padding: inherit;
  }
  .social {
    padding-top: 10px;
  }
  .fa-envelope::before {
    margin-left: 0;
  }
  /*END FOOTER*/
}

